--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,27 @@ TestResult.xml
 [Dd]ebugPS/
 [Rr]eleasePS/
 dlldata.c
+*.cache
+*.cache
+*.cache
+pStream/obj/Release/netstandard2.0/pStream.assets.cache
+pStream/obj/Release/netstandard2.0/pStream.csproj.FileListAbsolute.txt
+Stream/obj/Release/netstandard2.0/Stream.assets.cache
+Stream/obj/Release/netstandard2.0/Stream.csproj.FileListAbsolute.txt
+StreamPerfTest/obj/Release/netcoreapp2.0/StreamPerfTest.assets.cache
+StreamPerfTest/obj/Release/netcoreapp2.0/StreamPerfTest.csproj.FileListAbsolute.txt
+StreamPerfTest/obj/StreamPerfTest.csproj.nuget.g.props
+StreamTest/bin/Release/netcoreapp2.0/nunit_random_seed.tmp
+StreamTest/obj/Release/netcoreapp2.0/StreamTest.assets.cache
+StreamTest/obj/Release/netcoreapp2.0/StreamTest.csproj.FileListAbsolute.txt
+pStream/obj/Release/netstandard2.0/pStream.assets.cache
+pStream/obj/Release/netstandard2.0/pStream.csproj.FileListAbsolute.txt
+Stream/obj/Release/netstandard2.0/Stream.assets.cache
+Stream/obj/Release/netstandard2.0/Stream.csproj.FileListAbsolute.txt
+StreamPerfTest/obj/Release/netcoreapp2.0/StreamPerfTest.assets.cache
+StreamPerfTest/obj/Release/netcoreapp2.0/StreamPerfTest.csproj.FileListAbsolute.txt
+StreamPerfTest/obj/StreamPerfTest.csproj.nuget.g.props
+StreamTest/bin/Release/netcoreapp2.0/nunit_random_seed.tmp
+StreamTest/obj/Release/netcoreapp2.0/StreamTest.assets.cache
+StreamTest/obj/Release/netcoreapp2.0/StreamTest.csproj.FileListAbsolute.txt
+StreamTest/obj/StreamTest.csproj.nuget.g.props
