--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# Rider 2018.3 directory
+.idea/
+
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
@@ -42,6 +45,7 @@ Generated\ Files/
 # NUNIT
 *.VisualState.xml
 TestResult.xml
+nunit_random_seed.tmp
 
 # Build Results of an ATL Project
 [Dd]ebugPS/
